--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Template</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>SSA Academy</title>
+    <meta name="description" content="Developing Agility &amp; Nimbleness in the Future Economy">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
@@ -16,8 +16,7 @@
 	<meta name="theme-color" content="#ffffff">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
-
-    <link rel="stylesheet" href="dist/css/app.min.css">
+    <link rel="stylesheet" href="assets/css/app.min.css">
 </head>
 <body>
     <!--[if lt IE 8]>
@@ -28,18 +27,166 @@
     </noscript>
 
 
+    <header class="header header-bg" data-img="assets/img/bg1.png">
+        <div class="header-block">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-12">
+                        <nav class="navbar navbar-main navbar-main-bg navbar-toggleable-md navbar-clear">
+                            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <a class="navbar-brand" href="index.html"><img src="assets/img/logo.png" width="300" alt="SSA Academy"></a>
+                            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                                <ul class="navbar-nav ml-auto">
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="./about.html">About</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="./courses.html">Courses</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="./values.html">Values</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="./contact.html">Contact Us</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="header-cover">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h1 class="mt-3 header-title text-heavy text-white tt-u display-4">
+                            Developing Agility &amp;<br>
+                            Nimbleness in the<br>
+                            Future Economy
+                        </h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
 
+   <!--  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner" role="listbox">
+            <div class="carousel-item active">
+                <img class="d-block img-fluid" src="..." alt="First slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block img-fluid" src="..." alt="Second slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block img-fluid" src="..." alt="Third slide">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+ -->
+    <section class="section bg-right" data-img="assets/img/section-1.png">
+        <div class="section-block">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h4 class="section-title">
+                            Building Capabilities.<br>
+                            Drive Higher Corporate<br>
+                            Performance.
+                        </h4>
+                        <p>SSA Academy serves the learning and development needs of both C-Suite as well as middle management executives with a deep focus on building capabilities to drive higher corporate performance and to enable executives to be more nimble and agile in the future economy.</p>
 
+                        <a href="courses.html" class="btn btn-primary btn-lg">See Our Courses</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
+    <section class="section bg-left bg-dark bg-size-480" data-img="assets/img/section-2.png">
+        <div class="section-block">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-7 offset-md-5">
+                        <h4 class="section-title text-primary">Learn at your own pace</h4>
 
+                        <p>using innovative technology suited to the needs of our customers, we support both individuals and enterprise learners to study at their own pace, anytime and anywhere while still experiencing close mentorship and support. Our performance-based learning pedagogy uses real world settings to deliver tangible skills with real business outcomes.</p>
+
+                        <a href="courses.html" class="btn btn-primary btn-lg">More About PEBaaL Pedagogy</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section">
+        <div class="section-block">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h4 class="section-title">Get in Touch with Us!</h4>
+
+                        <p>SSA Academy provides customised programmes and solutions to address your specific needs. Send us your inquiries and we'll get back to you shortly.</p>
+
+                        <p>For Corporate Enquiries call us at</p>
+                        <p>Tel: 65-6632 9536</p>
+
+                        <p>Or email us at contact@ssa.academy or fill in the form below</p>
+                    </div>
+                    <div class="col-md-6">
+                        <form action="" method="POST">
+                            <div class="form-group">
+                                <input name="name" type="text" class="form-control form-control-lg" placeholder="Name">
+                            </div>
+                            <div class="form-group">
+                                <input name="email" type="email" class="form-control form-control-lg" placeholder="Email Address">
+                            </div>
+                            <div class="form-group">
+                                <input name="message" type="text" class="form-control form-control-lg" placeholder="Phone Number">
+                            </div>
+                            <div class="form-group">
+                                <textarea name="message" type="text" class="form-control form-control-lg" placeholder="Message"></textarea>
+                            </div>
+                            <div class="form-group">
+                                <!-- <button role="button" type="submit" class="btn btn-outline-secondary btn-lg">Send</button> -->
+                            </div>
+                        </form>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer footer-dark">
+        <div class="footer-block">
+            <div class="container-fluid">
+                <div class="col-md-12">
+                    <a href="index.html" class="navbar-brand"><img src="assets/img/logo.png" width="180" alt="SSA Academy"></a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.4.min.js"><\/script>')</script>
-    <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+    <!-- <script>window.jQuery || document.write('<script src="vendor/jquery/dist/jquery.min.js"><\/script>')</script> -->
+    <script src="assets/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
     <script>
-        window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
-        ga('create','UA-XXXXX-Y','auto');ga('send','pageview')
+        $(document).find('[data-img]').each(function (e) {
+            $(this).css({ 'background-image': 'url(' + $(this).data('img') + ')' });
+        });
     </script>
-    <script src="https://www.google-analytics.com/analytics.js" async defer></script>
+    <!-- <script src="assets/js/app.min.js"></script> -->
 </body>
 </html>
